force-app/main/default/objects/datamask__Masking_Execution_Log__c/datamask__Masking_Execution_Log__c.object-meta.xml
<CustomObject>
    <label>Run Log</label>
    <nameField>
        <displayFormat>DM-{000000}</displayFormat>
        <label>Run Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Run Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>