force-app/main/default/objects/datamask__Masking_Execution_Log__c/fields/datamask__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>datamask__Error_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>