force-app/main/default/objects/datamask__Masking_Execution_Log__c/fields/datamask__Masking_Execution_Id__c.field-meta.xml
<CustomField>
    <fullName>datamask__Masking_Execution_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Masking Execution Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>