force-app/main/default/objects/datamask__Masking_Execution_Log__c/fields/datamask__Object_Processing__c.field-meta.xml
<CustomField>
    <fullName>datamask__Object_Processing__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Object Processing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>